# csci_e59_mongo_greatexp_pyspark

./: .gitignore  README.md  docker-compose.yml  mongo-connect.py  project.toml  pyproject.toml  requirements.txt  setup.cfg
presentation_material/: Final Presentation.pptx
src/: create-aggregation-pipelines.py  data-pipeline.py  pyspark-reporting.py
src/data_pipeline/: datatypes.py  db.py  serializer.py  steps.py
tests/: conftest.py  test_datatypes.py  test_pipeline.py  test_steps.py  test_test.py
