[project]
dynamic = ["version"]
name = "data_pipeline"
dependencies = [
    'pymongo',
    'gdh @ git+ssh://git@github.com/procter-gamble/gdh-pipeline-utils.git',
    'python-dotenv'
]
requires-python = ">3.7"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-branch"
testpaths = [
    "tests"
]